--- a/src/pages/Cv.css
+++ b/src/pages/Cv.css
@@ -1,4 +1,6 @@
-/* CSS checked O unchecked X */
+/* CSS checked x unchecked o 
+redundant checked o unchecked x 
+double css checked o unchecked x  */
 .Cv {
   background-color: var(---base);
 }
@@ -9,51 +11,47 @@
   min-height: 100vh;
   text-align: left;
 }
-.Cv .downloadbutton {
-  display: block;
-  margin: 20px auto;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 2px 1px 5px 1px #141c213b;
-  background-color: var(---basedark);
-  font-size: 20px;
-  font-weight: 100;
-  letter-spacing: 2px;
-  color: var(---base);
-  text-decoration: none;
-  transition: all 0.4s ease;
-}
-.Cv .downloadbutton:hover {
-  background-color: var(---baselight);
-
-  color: var(---base);
-}
 .Cv main {
-  background-color: #fdfcf4;
-
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.295);
   margin: 15px 80px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.295);
+  background-color: #fdfcf4;
 }
 .Cv h1 {
-  margin-top: px;
   font-size: 100px;
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
   color: var(---basedark);
   letter-spacing: -7px;
 }
+.Cv .downloadbutton {
+  display: block;
+  margin: 20px auto;
+  padding: 5px 10px;
+  box-shadow: 2px 1px 5px 1px #141c213b;
+  border: none;
+  border-radius: 10px;
+  background-color: var(---basedark);
+  font-size: 20px;
+  font-weight: 100;
+  color: var(---base);
+  letter-spacing: 2px;
+  text-decoration: none;
+  transition: all 0.4s ease;
+}
 .Cv .subheader {
   margin-left: 7px;
   font-size: 20px;
-
-  letter-spacing: 2px;
   color: var(---basedark);
+  letter-spacing: 2px;
 }
 .Cv .highlightred {
   margin-left: 7px;
   font-size: 20px;
   font-weight: 400;
-  letter-spacing: 2px;
   color: var(---baselight);
+  letter-spacing: 2px;
+}
+.Cv .downloadbutton:hover {
+  background-color: var(---baselight);
+  color: var(---base);
 }
