--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -1,4 +1,6 @@
-/* CSS checked O unchecked X */
+/* CSS checked x unchecked o 
+redundant checked o unchecked x 
+double css checked o unchecked x  */
 footer {
   margin: auto;
   background-color: var(---baselight);
