--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,16 +1,18 @@
-/* CSS checked O unchecked X */
+/* CSS checked o unchecked x 
+redundant checked o unchecked x 
+double css checked o unchecked x  */
 .Projects {
   background-color: var(---basedark);
 }
 
 .Projects .projectspage {
-  margin-top: -140px;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin-top: -140px;
   text-align: center;
 }
-.Projects .projectspage h1 {
+.Projects h1 {
   margin: 140px 0 35px 10px;
   font-size: 120px;
   color: var(---base);
@@ -19,20 +21,83 @@
   text-align: left;
   letter-spacing: -7px;
 }
+.Projects .popuphighlight {
+  margin-top: 10px;
+  color: var(---baselight);
+  text-decoration: solid !important;
+  font-weight: bolder;
+}
+.Projects .cardText {
+  color: var(---basedark);
+  font-size: 19px;
+  font-weight: 900;
+  margin: 0;
+}
+
 .Projects .card {
-  max-width: 280px;
   display: inline-block;
-  background-color: var(---base);
-  padding: 20px;
+  max-width: 320px;
   margin-bottom: 40px;
-  outline: 5px solid var(---baselight);
+  padding: 20px 20px 5px 20px;
+  outline: 5px solid var(---basedark);
   outline-offset: -10px;
+  background-color: var(---base);
 }
-.red {
-  padding: 15px;
-  background-color: red;
+.Projects .cardicon {
+  font-size: 22px;
+  color: var(---basedark);
+}
+.Projects .visitButton,
+.popupButton {
+  display: block;
+  width: fit-content;
+  margin: 20px auto 5px;
+  padding: 3px 10px;
+  box-shadow: 1px 1px 5px 1px #1b2e472f;
+  border: 1px solid var(---basedark);
+  border-radius: 10px;
+  background-color: var(---base);
+  font-size: 14px;
+  font-weight: 100;
+  color: var(---basedark);
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  transition: all 0.4s ease;
 }
 
-/*  */
-
-.xlimage {max-height: 410px;}
+.Projects .visitButton:hover,
+.popupButton:hover {
+  background-color: var(---basedark);
+  color: var(---base);
+}
+/* popup to edit */
+.Popup h2 {
+  font-size: 55px;
+  font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  color: var(---baselight);
+  letter-spacing: -4px;
+}
+.Popup .xlimage {
+  max-height: 410px;
+}
+.Popup .launchbutton {
+  display: block;
+  width: fit-content;
+  margin: 20px auto 5px;
+  padding: 3px 10px;
+  box-shadow: 1px 1px 5px 1px #1b2e472f;
+  border: 1px solid var(---baselight);
+  border-radius: 10px;
+  background-color: var(---base);
+  font-size: 14px;
+  font-weight: 100;
+  color: var(---baselight);
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  transition: all 0.4s ease;
+}
+.Popup .launchbutton:hover {
+  background-color: var(---baselight);
+  color: var(---base);
+}
