--- a/src/pages/subpage/Contactsection.css
+++ b/src/pages/subpage/Contactsection.css
@@ -1,1 +1,3 @@
-/* CSS checked O unchecked X */
+/* CSS checked x unchecked o 
+redundant checked o unchecked x 
+double css checked o unchecked x  */
