--- a/src/pages/subpage/Mailsection.css
+++ b/src/pages/subpage/Mailsection.css
@@ -1,25 +1,43 @@
-/* CSS checked O unchecked X */
+/* CSS checked x unchecked o 
+redundant checked o unchecked x 
+double css checked o unchecked x  */
 .Mailsection button {
   width: fit-content;
   padding: 3px 10px;
+  box-shadow: 2px 1px 5px 1px #ee6c6c2f;
   border: 1px solid var(---baselight);
   border-radius: 10px;
-  box-shadow: 2px 1px 5px 1px #ee6c6c2f;
   background-color: var(---base);
   font-size: 20px;
-  color: var(---baselight);
-  transition: all 0.4s ease;
   font-weight: 100;
+  color: var(---baselight);
   letter-spacing: 3px;
+  transition: all 0.4s ease;
 }
 .Mailsection button:hover {
   background-color: var(---baselight);
   color: var(---base);
 }
 
+.Mailsection form input,
+.Mailsection form textarea {
+  border: 2px solid var(---baselight);
+  background-color: var(---base);
+}
+
+.Mailsection form input:focus,
+.Mailsection form textarea:focus {
+  border: 2px solid var(---basedark);
+  background-color: var(---base);
+}
+
+.Mailsection form input::placeholder,
+.Mailsection form textarea::placeholder {
+  opacity: 0.8;
+}
 .Mailsection form .form-group {
-  max-width: 70%;
   align-items: start;
+  max-width: 70%;
 }
 
 .Mailsection form .name {
@@ -28,20 +46,4 @@
 .Mailsection form .forminput {
   display: inline-block;
   text-align: left;
-}
-.Mailsection form input,
-.Mailsection form textarea {
-  background-color: var(---base);
-  border: 2px solid var(---baselight);
-}
-
-.Mailsection form input:focus,
-.Mailsection form textarea:focus {
-  background-color: var(---base);
-  border: 2px solid var(---basedark);
-}
-
-.Mailsection form input::placeholder,
-.Mailsection form textarea::placeholder {
-  opacity: 0.8;
 }
