--- a/src/pages/subpage/Projectsection.css
+++ b/src/pages/subpage/Projectsection.css
@@ -1,4 +1,4 @@
-/* CSS checked x unchecked o 
+/* CSS checked o unchecked x 
 redundant checked o unchecked x 
 double css checked o unchecked x  */
 .Projectsection {
@@ -12,27 +12,34 @@ double css checked o unchecked x  */
   font-weight: 900;
 }
 .Projectsection img {
-  max-width: 50%;
+  max-width: 60%;
 }
 
-.Projectsection button {
+.Projectsection a {
   display: inline-block;
-  margin: 0 auto;
-  padding: 0 5px 4px 5px;
-  border: none;
-  background-color: #00000000;
-  color: var(---baselight);
-  transition: all 0.3s ease;
+  margin: 10px;
+  padding: 7px 12px;
+  box-shadow: 2px 1px 4px 3px #001a323b;
+  border: 1px solid var(---base);
+  border-radius: 10px;
+  background-color: var(---basedark);
+  font-size: 12px;
+  font-weight: 100;
+  color: var(---base);
+  text-decoration: none;
+  letter-spacing: 2px;
+  transition: all 0.4s ease;
+  text-transform: uppercase
 }
 
-.Projectsection button:hover {
-  border: none;
+.Projectsection a:hover {
   background-color: var(---base);
+  border: 1px solid var(---basedark);
   color: var(---basedark);
 }
 .Projectsection .negativeMargin {
   align-items: center;
-  margin-top: -40px;
+  margin-top: -10px;
 }
 .Projectsection .projectIntro {
   margin-bottom: 120px;
