--- a/src/pages/subpage/Aboutsection.css
+++ b/src/pages/subpage/Aboutsection.css
@@ -4,8 +4,11 @@ double css checked o unchecked x  */
 .Aboutsection {
   margin-bottom: 50px;
 }
+.Aboutsection .aboutbox {
+  padding: 0 100px;
+}
 .Aboutsection .profilepicture {
-  height: 650px;
+  height: 400px;
   filter: drop-shadow(-25px -20px 1px var(---baselight));
   z-index: -10;
 }
@@ -16,7 +19,7 @@ double css checked o unchecked x  */
 }
 .Aboutsection .abouttext p {
   padding: 90px 120px 0 140px;
-  font-size: 30px;
+  font-size: 20px;
 }
 .Aboutsection .abouttext button {
   display: inline-block;
@@ -36,16 +39,18 @@ double css checked o unchecked x  */
 /* code CODE code */
 .Aboutsection .codeimage {
   position: relative;
-  margin: 40px 0 0 80px;
-  padding: 90px 0 0 20px;
-  height: 366px;
-  width: 584px;
+  margin: 25px 0 0 80px;
+  padding: 60px 0 0 14px;
+  height: 292px;
+  width: 468px;
   background-image: url("../../media/codelight.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   font-size: 20px;
   font-weight: 800;
-  line-height: 35px;
+  line-height: 33px;
   font-family: "Patrick Hand SC", cursive;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.4px;
   z-index: 1;
 }
 .Aboutsection .codeimage .colorone {
