--- a/src/pages/subpage/Projectsection.css
+++ b/src/pages/subpage/Projectsection.css
@@ -5,10 +5,11 @@ double css checked o unchecked x  */
   padding-bottom: 40px;
   background-color: var(---basedark);
   color: var(---base);
+  font-size: 16px;
 }
 
 .Projectsection h4 {
-  font-size: 60px;
+  font-size: 80px;
   font-weight: 900;
 }
 .Projectsection img {
@@ -29,7 +30,7 @@ double css checked o unchecked x  */
   text-decoration: none;
   letter-spacing: 2px;
   transition: all 0.4s ease;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 .Projectsection a:hover {
@@ -42,7 +43,7 @@ double css checked o unchecked x  */
   margin-top: -10px;
 }
 .Projectsection .projectIntro {
-  margin-bottom: 120px;
+  margin-bottom: 80px;
 }
 .Projectsection .projectTools {
   opacity: 0.7;
@@ -61,4 +62,17 @@ double css checked o unchecked x  */
 }
 .Projectsection .projectTextright {
   padding-right: 150px;
+}
+.Projectsection .projectIntro button {
+  padding: 0 12px;
+  border: none;
+  background-color: #00000000;
+  color: var(---baselight);
+  transition: all 0.4s ease;
+}
+
+.Projectsection .projectIntro button:hover {
+  border: none;
+  background-color: var(---base);
+  color: var(---basedark);
 }
