--- a/src/pages/Cv.css
+++ b/src/pages/Cv.css
@@ -60,16 +60,11 @@ double css checked o unchecked x  */
   display: block;
   margin: 20px auto;
   padding: 5px 10px;
+
   box-shadow: 2px 1px 5px 1px #141c213b;
-  border: none;
-  border-radius: 10px;
-  background-color: var(---basedark);
+  border: none !important;
   font-size: 20px;
-  font-weight: 100;
-  color: var(---base);
-  letter-spacing: 2px;
   text-decoration: none;
-  transition: all 0.4s ease;
 }
 .Cv .downloadbutton:hover {
   background-color: var(---baselight);
