--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -1,8 +1,15 @@
 /* CSS checked x unchecked o 
 redundant checked o unchecked x 
 double css checked o unchecked x  */
-footer {
-  margin: auto;
+.Footer {
+  padding: 20px;
   background-color: var(---baselight);
-  color: green;
+  color: var(---base);
+}
+.Footer .footerlink {
+  color: var(---basedark);
+}
+.Footer .footerlink:hover{
+  background-color: var(---base);
+  color: var(---baselight)
 }
