--- a/src/pages/subpage/Projectsection.css
+++ b/src/pages/subpage/Projectsection.css
@@ -21,16 +21,8 @@ double css checked o unchecked x  */
   margin: 10px;
   padding: 7px 12px;
   box-shadow: 2px 1px 4px 3px #001a323b;
-  border: 1px solid var(---base);
-  border-radius: 10px;
-  background-color: var(---basedark);
   font-size: 12px;
-  font-weight: 100;
-  color: var(---base);
   text-decoration: none;
-  letter-spacing: 2px;
-  transition: all 0.4s ease;
-  text-transform: uppercase;
 }
 
 .Projectsection a:hover {
@@ -43,7 +35,8 @@ double css checked o unchecked x  */
   margin-top: -10px;
 }
 .Projectsection .projectIntro {
-  margin-bottom: 80px;
+  font-size: 20px;
+;
 }
 .Projectsection .projectTools {
   opacity: 0.7;
