--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -51,3 +51,19 @@ double css checked o unchecked x  */
   color: var(---basedark);
   letter-spacing: 1px;
 }
+@media (max-width: 510px) {
+  .Navbar nav img {
+    height: 32px;
+  }
+  .Navbar .navigation a {
+    font-size: 12px;
+  }
+}
+@media (max-width: 410px) {
+  .Navbar nav img {
+    height: 28px;
+  }
+  .Navbar .navigation a {
+    font-size: 10px;
+  }
+}
