--- a/src/pages/Cv.css
+++ b/src/pages/Cv.css
@@ -1,4 +1,4 @@
-/* CSS checked x unchecked o 
+/* CSS checked o unchecked x 
 redundant checked o unchecked x 
 double css checked o unchecked x  */
 .Cv {
