--- a/src/pages/subpage/Aboutsection.css
+++ b/src/pages/subpage/Aboutsection.css
@@ -1,9 +1,7 @@
 /* CSS checked x unchecked o 
 redundant checked o unchecked x 
 double css checked o unchecked x  */
-.Aboutsection {
-  margin-bottom: 50px;
-}
+
 .Aboutsection .aboutbox {
   padding: 0 100px;
 }
@@ -24,7 +22,7 @@ double css checked o unchecked x  */
 .Aboutsection .abouttext button {
   display: inline-block;
   margin: 0 auto;
-  padding: 0 20px 4px 20px;
+
   border: none;
   background-color: #00000000;
   color: var(---baselight);
@@ -61,4 +59,10 @@ double css checked o unchecked x  */
 }
 .Aboutsection .codeimage .colorthree {
   color: var(---secondary);
+}
+
+@media (max-width: 1023px) {
+  .Aboutsection .aboutbox {
+    padding: 0 50px;
+  }
 }
