--- a/src/pages/subpage/Mailsection.css
+++ b/src/pages/subpage/Mailsection.css
@@ -2,7 +2,12 @@
 redundant checked o unchecked x 
 double css checked o unchecked x  */
 
-
+.Mailsection h2 {
+  font-size: 30px;
+  font-weight: 100;
+  color: var(---baselight);
+  letter-spacing: 3px;
+}
 .Mailsection button {
   width: fit-content;
   padding: 3px 10px;
@@ -16,7 +21,6 @@ double css checked o unchecked x  */
 
 .Mailsection form input,
 .Mailsection form textarea {
- 
   border: 2px solid var(---baselight);
   background-color: var(---base);
 }
@@ -42,4 +46,12 @@ double css checked o unchecked x  */
 .Mailsection form .forminput {
   display: inline-block;
   text-align: left;
+}
+@media (max-width: 960px) {
+  .Mailsection h2 {
+    font-size: 30px;
+  }
+  .Mailsection form .form-group {
+
+  max-width: 100%;}
 }
