--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -17,7 +17,7 @@ double css checked o unchecked x  */
   color: var(---baselight);
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
-  letter-spacing: -7px;
+  letter-spacing: -6px;
 }
 
 .Contact a {
@@ -48,16 +48,49 @@ double css checked o unchecked x  */
   }
 }
 @media (max-width: 960px) {
+  .Contact h1 {
+    margin-bottom: 20px;
+  }
+
   .Contact .contactbox {
     line-height: 60px;
     font-size: 24px;
     font-weight: 100;
   }
 }
-@media (max-width: 768px) {  .Contact h1 {
+@media (max-width: 768px) {
+  .Contact h1 {
     font-size: 90px;
-  }}
-  @media (max-width: 576px) {
+  }
+  .Contact .contactbox {
+    line-height: 55px;
+    font-size: 20px;
+  }
+}
+@media (max-width: 576px) {
   .Contact h1 {
     font-size: 65px;
-  }}
+  }
+  .Contact .contactbox {
+    line-height: 40px;
+  }
+}
+@media (max-width: 480px) {
+  .Contact h1 {
+    font-size: 65px;
+  }
+  .Contact .contactbox {
+    line-height: 38px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 380px) {
+  .Contact h1 {
+    font-size: 50px;
+    letter-spacing: -3px;
+  }
+  .Contact .contactbox {
+    line-height: 38px;
+    font-size: 14px;
+  }
+}
