--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -2,7 +2,7 @@
 redundant checked o unchecked x 
 double css checked o unchecked x  */
 .Footer {
-  padding: 20px;
+
   background-color: var(---baselight);
   color: var(---base);
 }
@@ -12,4 +12,10 @@ double css checked o unchecked x  */
 .Footer .footerlink:hover {
   background-color: var(---base);
   color: var(---baselight);
+}
+@media (max-width: 768px) {
+  .Footer  {
+   font-size: 12px;
+  }
+  
 }
