--- a/src/pages/subpage/Popup.css
+++ b/src/pages/subpage/Popup.css
@@ -49,3 +49,9 @@ double css checke o unchecked x  */
     top: 25px;
   }
 }
+@media (max-width: 400px) {
+ .Popup {
+    top: 30px;
+  }
+  .popup-inner .close-btn{font-size: 10px;}
+}
