--- a/src/pages/Aboutme.css
+++ b/src/pages/Aboutme.css
@@ -124,8 +124,9 @@
     margin: 5px 50px 30px 50px;
   }
   .Aboutme figcaption {
-    font-size: 5px;
+    font-size: 6px; letter-spacing: 1px;
   }
+ 
 }
 @media (max-width: 480px) {
   .Aboutme .aboutInfo {
@@ -148,9 +149,7 @@
     font-size: 50px;
     letter-spacing: -3px;
   }
-  .Aboutme button {
-     font-size: 8px;
-  }
+
 }
 /*  */
 /*  */
