--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -32,7 +32,6 @@ double css checked o unchecked x  */
 }
 
 .Home .hero h1 {
-  margin-top: 30px;
   font-size: 120px;
   font-weight: 900;
   font-family: "Montserrat", sans-serif;
@@ -81,7 +80,73 @@ double css checked o unchecked x  */
     font-size: 36px;
   }
 }
-@media (max-width: 960px) { .Home .hero h1 {
+@media (max-width: 960px) {
+  .Home .hero h1 {
     font-size: 105px;
     letter-spacing: -5px;
-  }}
+  }
+}
+@media (max-width: 720px) {
+  .Home .hero h1 {
+    font-size: 90px;
+    letter-spacing: -5px;
+  }
+  .Home .hero h2 {
+    font-size: 36px;
+  }
+  .Home .hero h3 {
+    font-size: 26px;
+  }
+  .Home .hero button {
+    padding: 3px 10px;
+    letter-spacing: 1px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 600px) {
+  .Home .hero {
+    padding: 140px 0 70px 0;
+  }
+}
+@media (max-width: 540px) {
+  .Home .hero h1 {
+    font-size: 70px;
+    letter-spacing: -2px;
+  }
+  .Home .hero h2 {
+    font-size: 26px;
+  }
+  .Home .hero h3 {
+    font-size: 20px;
+  }
+  .Home .hero button {
+    padding: 3px 6px;
+    letter-spacing: 1px;
+    font-size: 16px;
+  }
+  .Home .hero {
+    min-height: 400px;
+    padding: 120px 0 40px 0;
+  }
+}
+@media (max-width: 420px) {
+  .Home .hero h1 {
+    font-size: 50px;
+  }
+  .Home .hero h2 {
+    font-size: 22px;
+  }
+  .Home .hero h3 {
+    font-size: 18px;
+  }
+  .Home .hero button {
+    margin:5px ;
+    padding: 3px 6px;
+    letter-spacing: 1px;
+    font-size: 13px;
+  }
+  .Home .hero {
+    min-height: 400px;
+    padding: 130px 0 60px 0;
+  }
+}
