fixed size problems on phone screen

--- a/src/pages/Aboutme.css
+++ b/src/pages/Aboutme.css
@@ -93,6 +93,7 @@
 @media (max-width: 768px) {
   .Aboutme h1 {
     font-size: 90px;
+      letter-spacing: -6px;
   }
   .Aboutme img,
   .Aboutme figcaption {
@@ -105,7 +106,7 @@
     margin: 5px 70px 40px 70px;
   }
   .Aboutme figcaption {
-    font-size: 8px;
+    font-size: 9px;letter-spacing: 1px;
   }
 }
 @media (max-width: 576px) {
@@ -123,9 +124,7 @@
   .Aboutme .aboutInfo {
     margin: 5px 50px 30px 50px;
   }
-  .Aboutme figcaption {
-    font-size: 6px; letter-spacing: 1px;
-  }
+   
  
 }
 @media (max-width: 480px) {
@@ -137,8 +136,9 @@
     float: right;
     margin: -15px -17px 10px 2px;
   }
-  .Aboutme h1 {
-    font-size: 65px;
+  .Contact h1 {
+    font-size: 60px;
+       letter-spacing: -2px;
   }
   .Aboutme button {
     font-size: 11px;
@@ -146,8 +146,8 @@
 }
 @media (max-width: 380px) {
   .Aboutme h1 {
-    font-size: 50px;
-    letter-spacing: -3px;
+    font-size: 55px;
+  
   }
 
 }
