--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -103,6 +103,7 @@ double css checked o unchecked x  */
 @media (max-width: 768px) {
   .Projects h1 {
     font-size: 90px;
+    letter-spacing: -6px;
   }
   .Projects .cardicon {
     font-size: 16px;
@@ -111,15 +112,21 @@ double css checked o unchecked x  */
 @media (max-width: 576px) {
   .Projects h1 {
     font-size: 65px;
+    letter-spacing: -3px;
   }
 }
 
 @media (max-width: 480px) {
-  .Aboutme h1 {
-    font-size: 65px;
+  .Contact h1 {
+    font-size: 60px;
+    letter-spacing: -2px;
   }
 }
 @media (max-width: 400px) {
+  .Contact h1 {
+    font-size: 55px;
+    letter-spacing: -2px;
+  }
   .Popup .popupText {
     font-size: 12px;
   }
@@ -128,12 +135,5 @@ double css checked o unchecked x  */
   }
   .Popup .launchbutton {
     font-size: 12px;
-  }
-}
-
-@media (max-width: 380px) {
-  .Aboutme h1 {
-    font-size: 50px;
-    letter-spacing: -3px;
   }
 }
